# flowkit

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  initial_architecture.md  inspired_ideas.md  pyproject.toml  sonar-project.properties
docs/: README.md  airflow-deployment.md  api-reference.md  architecture.md  assets-catalog.md  configuration.md  extending-reference.md  extending.md  how-to-guides.md  local-airflow.md  quickstart-dev.md  testing.md  tutorial-dev-setup.md  tutorial-first-asset.md  user-guide.md
example_dags/: dag_factory.py  flowkit_dags.py  flowkit_selective.py
references/: reference_api.md
src/data_assets/: __init__.py  __main__.py  cli.py  runner.py
src/data_assets/assets/: __init__.py
src/data_assets/checkpoint/: __init__.py  manager.py
src/data_assets/core/: __init__.py  api_asset.py  asset.py  column.py  enums.py  identifiers.py  registry.py  rest_asset.py  run_context.py  transform_asset.py  types.py
src/data_assets/dag/: __init__.py  fingerprint.py  generator.py  overrides.py  systemd.py  templates.py
src/data_assets/db/: __init__.py  dialect.py  engine.py  models.py  retry.py
src/data_assets/extract/: __init__.py  api_client.py  flatten.py  pagination.py  parallel.py  rate_limiter.py  token_manager.py  tokenization_client.py
src/data_assets/load/: __init__.py  loader.py  promoter.py  schema_manager.py  strategies.py  temp_table.py  tokenization.py
src/data_assets/observability/: __init__.py  logging.py  run_tracker.py
src/data_assets/transform/: __init__.py  db_transform.py
src/data_assets/validation/: __init__.py  missing_keys.py  validators.py
src/engmx_flowkit/: __init__.py  config.py  dag_factory.py  exceptions.py
src/engmx_flowkit/assets/: __init__.py  _base.py  _registry.py  github.py  servicenow.py  sonarqube.py
src/engmx_flowkit/clients/: __init__.py  _base.py  github.py  servicenow.py  sonarqube.py
tests/: conftest.py
tests/fixtures/errors/: http_429.json
tests/fixtures/github/: branches.json  commits.json  deployments_graphql_empty.json  deployments_graphql_errors.json  deployments_graphql_page1.json  deployments_graphql_page2.json  members.json  pull_requests.json  repo_properties.json  repos_org1.json  repos_org2.json  runner_group_repos.json  runner_groups.json  user_details.json  workflow_jobs.json  workflow_runs.json  workflows.json
tests/fixtures/jira/: issues_eng.json  projects.json
tests/fixtures/servicenow/: catalog_items.json  catalog_requests.json  change_tasks.json  changes.json  choices.json  cmdb_cis.json  departments.json  hardware_assets.json  incidents.json  locations.json  problems.json  user_groups.json  users.json
tests/fixtures/sonarqube/: analyses_proj_alpha.json  branches_proj_alpha.json  (+7 more)
tests/integration/: _db_utils.py  conftest.py  test_checkpoint.py  test_e2e.py  test_e2e_github.py  test_e2e_jira.py  test_e2e_servicenow.py  test_e2e_sonarqube.py  test_loader.py  test_run_tracker.py  test_sonarqube_adoption_trend.py  test_tokenization_end_to_end.py  test_transform_schema.py
tests/unit/: conftest.py  test_db_retry.py  test_db_transform.py  test_dialect.py  test_drift_detection.py  test_engine.py  test_loader.py  test_missing_keys.py  test_runner.py  test_validators.py
(+83 files in other folders)
