[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-assets"
version = "0.1.0"
description = "Self-contained ETL engine for data assets, backed by PostgreSQL, orchestrated by Apache Airflow"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "EngMX Team" },
]
keywords = ["airflow", "etl", "data-assets", "postgres", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pandas>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "PyJWT>=2.0",
    "cryptography>=41.0",
    "pysnc>=1.0",
]

[project.scripts]
data-assets = "data_assets.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "respx>=0.21",
    "testcontainers[postgres]>=4.0",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/data_assets"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring a live Postgres instance (Docker)",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "respx>=0.21",
    "testcontainers[postgres]>=4.0",
    "ruff",
    "mypy",
]
